--- a/app/templates/owner/_sidebar.html
+++ b/app/templates/owner/_sidebar.html
@@ -9,8 +9,10 @@
             <li><span class="fas fa-store-alt"></span> <a href=" {{ url_for('post')}} " class="addActive">Post</a></li>
             <li><span class="fas fa-cart-arrow-down"></span> <a href=" {{ url_for('product') }} " class="addActive">Product</a></li>
             <li><span class="fas fa-users"></span> <a href=" {{ url_for('subscriber') }} " class="addActive">Subscriber</a></li>
+            <li><span class="fas fa-users"></span> <a href=" {{ url_for('contact_list') }} " class="addActive">Contact</a></li>
             <li><span class="fas fa-plus-circle"></span> <a href=" {{ url_for('addpost') }} " class="addActive">Add Post</a></li>
             <li><span class="fas fa-plus-circle"></span> <a href=" {{ url_for('addproduct') }} " class="addActive">Add Product</a></li>
+            <li><span class="fas fa-users"></span> <a href=" # " class="addActive">Change Password</a></li>
         </ul>
     </div>
 </div>
