--- a/app/templates/owner/owner_contact_view.html
+++ b/app/templates/owner/owner_contact_view.html
@@ -1,47 +1,50 @@
 {% extends 'owner/owner_base.html' %}
 
 
-
 {% block content %}
 
+
+
 <div class="dashboard">
+
     {% include 'owner/_sidebar.html' %}
 
-    
     <div class="right_container">
+
         {% include 'owner/_searchbar.html' %}
 
+        <div class="contact_page">
+            <h2>List of Contact</h2>
 
-        <div class="post_in_postpage">
-
-            <h2>Latest Post</h2>
-            {% for post in posts %}
-            <div class="postpage_content">
-                <label><a href="  {{ url_for('owner_post_view', id=post.id) }}  "> {{post.title}} </a></label>
-                <a href=" {{ url_for('edit_post', id=post.id) }} "><span class="fas fa-edit"></span></a>
-                <span onclick="add_CssClass()"  class="fas fa-trash"></span> 
-                <a href=" {{ url_for('owner_post_view', id=post.id) }} "><span class="fas fa-arrow-right"></span></a>
+            {% for contact in contacts %}
+            <div class="list_of_contact">
+                <label> {{contact.name}} </label>
+                <label> {{contact.email}} </label>
+                <span onclick="add_CssClass()" data-bs-toggle="modal" data-bs-target="#exampleModal" class="fas fa-trash"></span> 
+                <a href=" {{ url_for('delete_contact', id=contact.id)}} "><span class="fas fa-arrow-right"></span></a>
             </div>
 
 
-            <div class="pop ">
+            <div class="pop modal" id="exampleModal">
                 <div class="pop_box ">
+                    {% if contact %}
                     <i class="fas fa-exclamation"></i>
-                    <h1>Your Post will be deleted Permanently!</h1>
+                    <h1>Contact {{contact.name}} will be deleted Permanently!</h1>
                     <label>Are you sure to proceed?</label>
                 
                     <div class="btns">
                         <a href="" class="btn1" onclick="remove_cssClass()">Cancel Process</a>
-                        <a href=" {{ url_for('delete_post', id=post.id) }} " class="btn2">Delete Post</a>
+                        <a href=" {{ url_for('delete_contact', id=contact.id)}} " class="btn2">Delete Contact</a>
                     </div>
+                    {% endif %}
                 
                 </div>
             </div>
 
             {% endfor %}
 
-
             
+
 
             <div class="next_pre_btn">
                 {% if next_url %}
@@ -52,11 +55,11 @@
                 <a href="{{prev_url}}">Pervious</a>
                 {% endif %}
             </div>
+
         </div>
+
 
     </div>
 </div>
-
-
 
 {% endblock %}
