--- a/app/templates/owner/owner_index.html
+++ b/app/templates/owner/owner_index.html
@@ -54,11 +54,11 @@
                 <div class="post_content">
                     <label><a href=" {{ url_for('owner_post_view', id=post.id) }} "> {{ post.title.title() }} </a></label>
                     <a href=" {{ url_for('edit_post', id=post.id) }} "><span class="fas fa-edit"></span></a>
-                     <span onclick="add_CssClass()"  class="fas fa-trash"></span> 
+                    <a href=" {{ url_for('delete_post', id=post.id) }} "><span onclick="return confirm('Are you sure to proceed?')"  class="fas fa-trash"></span></a> 
                 </div>
 
 
-                <div class="pop ">
+                <!-- <div class="pop ">
                     <div class="pop_box ">
                         <i class="fas fa-exclamation"></i>
                         <h1>Your Post will be deleted Permanently!</h1>
@@ -70,7 +70,7 @@
                         </div>
                     
                     </div>
-                    </div>
+                    </div> -->
 
 
                 {% endfor %}
