--- a/app/templates/owner/owner_post.html
+++ b/app/templates/owner/owner_post.html
@@ -19,7 +19,7 @@
             <div class="postpage_content">
                 <label><a href="  {{ url_for('owner_post_view', id=post.id) }}  "> {{post.title}} </a></label>
                 <a href=" {{ url_for('edit_post', id=post.id) }} "><span class="fas fa-edit"></span></a>
-                <span onclick="add_CssClass()"  class="fas fa-trash"></span> 
+                <a href=" {{ url_for('delete_post', id=post.id) }} "><span onclick="return confirm('Are you sure to proceed?')"  class="fas fa-trash"></span></a> 
                 <a href=" {{ url_for('owner_post_view', id=post.id) }} "><span class="fas fa-arrow-right"></span></a>
             </div>
 
