--- a/app/templates/owner/owner_subscriber.html
+++ b/app/templates/owner/owner_subscriber.html
@@ -17,11 +17,12 @@
             {% for sub in subscribers %}
             <div class="subscriber_content">
                 <label>{{sub.email}}</label>
-                <span class="fas fa-trash" onclick="add_CssClass()"></span>
+                <!-- <span class="fas fa-trash" onclick="add_CssClass()"></span> -->
+                <a href=" {{ url_for('delete_subscriber', id=sub.id) }} "><span onclick="return confirm('Are you sure to proceed?')"  class="fas fa-trash"></span></a>
             </div>
 
 
-            <div class="pop ">
+            <!-- <div class="pop ">
                 <div class="pop_box ">
 
                     {% if sub %}
@@ -38,7 +39,7 @@
                     {% endif %}
 
                 </div>
-            </div>
+            </div> -->
 
             {% endfor %}
 
