--- a/app/templates/owner/owner_contact_view.html
+++ b/app/templates/owner/owner_contact_view.html
@@ -22,7 +22,7 @@
                 <label> {{contact.email}} </label>
                 <a href=" {{ url_for('delete_contact', id=contact.id)}} ">
                 <span onclick=" return confirm('Are you sure to proceed?')" class="fas fa-trash"></span></a> 
-                <a href=" {{ url_for('delete_contact', id=contact.id)}} "><span class="fas fa-arrow-right"></span></a>
+                <a href=" {{ url_for('contact_detial_view', id=contact.id)}} "><span class="fas fa-arrow-right"></span></a>
             </div>
 
 
