--- a/app/templates/client/base.html
+++ b/app/templates/client/base.html
@@ -18,14 +18,15 @@
 </head>
 <body>
     
-    {% with messages = get_flashed_messages() %}
-    {% if messages %}
-    <ul class=flashes>
-    {% for message in messages %}
-      <li>{{ message }}</li>
-    {% endfor %}
-    </ul>
-    {% endif %}
+    {% with messages = get_flashed_messages(with_categories=true) %}
+      {% if messages %}
+      {% for category, message in messages %}
+        <div class="alert {{category}}">
+            <span>{{category}}:  {{message}} </span>
+            <span class="fas fa-times" onclick="alertClose()"></span>
+        </div>
+      {% endfor %}
+      {% endif %}
     {% endwith %}
     
 
