--- a/app/templates/owner/owner_base.html
+++ b/app/templates/owner/owner_base.html
@@ -16,15 +16,20 @@
 </head>
 <body>
 
-    {% with messages = get_flashed_messages() %}
+
+  {% with messages = get_flashed_messages(with_categories=true) %}
     {% if messages %}
-    <ul class=flashes>
-    {% for message in messages %}
-      <li>{{ message }}</li>
+    {% for category, message in messages %}
+      <div class="alert {{category}}">
+        <span>{{category}}:  {{message}} </span>
+        <span class="fas fa-times" onclick="alertClose()"></span>
+      </div>
     {% endfor %}
-    </ul>
     {% endif %}
-    {% endwith %}
+  {% endwith %}
+
+    
+    
     
 
     {% block content %}
