--- a/app/templates/owner/owner_base.html
+++ b/app/templates/owner/owner_base.html
@@ -21,7 +21,7 @@
     {% if messages %}
     {% for category, message in messages %}
       <div class="alert {{category}}">
-        <span>{{category}}:  {{message}} </span>
+        <span>{{category.title()}}:  {{message}} </span>
         <span class="fas fa-times" onclick="alertClose()"></span>
       </div>
     {% endfor %}
