--- a/app/templates/owner/owner_login.html
+++ b/app/templates/owner/owner_login.html
@@ -5,8 +5,8 @@
 <div class="login_form">
     <h1>Admin Login</h1>
     <form action="" method="POST">
-        <input type="text" name="username" placeholder="Type Username">
-        <input type="password" name="password" placeholder="Type Password">
+        <input type="text" name="username" placeholder="Type Username" required>
+        <input type="password" name="password" placeholder="Type Password" required>
         <input type="submit" value="Login">
     </form>
 
