--- a/app/templates/owner/_sidebar.html
+++ b/app/templates/owner/_sidebar.html
@@ -12,7 +12,7 @@
             <li><span class="fas fa-users"></span> <a href=" {{ url_for('contact_list') }} " class="addActive">Contact</a></li>
             <li><span class="fas fa-plus-circle"></span> <a href=" {{ url_for('addpost') }} " class="addActive">Add Post</a></li>
             <li><span class="fas fa-plus-circle"></span> <a href=" {{ url_for('addproduct') }} " class="addActive">Add Product</a></li>
-            <li><span class="fas fa-users"></span> <a href=" # " class="addActive">Change Password</a></li>
+            <li><span class="fas fa-users"></span> <a href=" {{ url_for('list_of_admin') }} " class="addActive">Admin List</a></li>
         </ul>
     </div>
 </div>
