design registration from

--- a/app/templates/owner/list_of_admin.html
+++ b/app/templates/owner/list_of_admin.html
@@ -11,7 +11,7 @@
 
         <div class="admin_page">
             <h2>List of Admin</h2>
-            <button>Add New Admin</button>
+            <a href=" {{ url_for('registration') }} "><button>Add New Admin</button></a>
 
             <div class="list_of_admin">
                 <label>name</label>
