--- a/app/templates/owner/_searchbar.html
+++ b/app/templates/owner/_searchbar.html
@@ -7,8 +7,6 @@
     </div>
 
     <div class="logout">
-        <form action="">
-            <button type="submit">Logout</button>
-        </form>
+           <a href=" {{ url_for('logout') }} "> <button type="submit">Logout</button></a>
     </div>
 </div>
