--- a/app/templates/owner/owner_registration.html
+++ b/app/templates/owner/owner_registration.html
@@ -6,7 +6,7 @@
     <h1>Admin Login</h1>
     <form action="" method="POST">
         <input type="text" name="username" placeholder="Enter Your Username" required>
-        <input type="email" name="username" placeholder="Enter Your Email" required>
+        <input type="email" name="email" placeholder="Enter Your Email" required>
         <input type="password" name="password" placeholder="Type Password" required>
         <input type="password" name="repeatpassword" placeholder="Repeat Password" required>
         <input type="submit" value="Login">
