--- a/app/templates/owner/owner_registration.html
+++ b/app/templates/owner/owner_registration.html
@@ -3,14 +3,27 @@
 {% block content %}
 
 <div class="login_form">
-    <h1>Admin Login</h1>
+
+    {% if admin %}
+    <h1>Update Admin</h1>
+    <form action="" method="POST">
+        <input type="text" name="username" value="{{admin.username}}" placeholder="Enter Your Username" required>
+        <input type="email" name="email" value="{{admin.email}}" placeholder="Enter Your Email" required>
+        <input type="password" name="password" placeholder="Type a new Password" required>
+        <input type="password" name="repeatpassword" placeholder="Repeat Password" required>
+        <input type="submit" value="Update">
+    </form>
+
+    {% else %}
+    <h1>Admin Registration</h1>
     <form action="" method="POST">
         <input type="text" name="username" placeholder="Enter Your Username" required>
         <input type="email" name="email" placeholder="Enter Your Email" required>
         <input type="password" name="password" placeholder="Type Password" required>
         <input type="password" name="repeatpassword" placeholder="Repeat Password" required>
-        <input type="submit" value="Login">
+        <input type="submit" value="Register">
     </form>
+    {% endif %}
 
 </div>
 
