display contact notifaction in dashboard

--- a/app/templates/owner/_sidebar.html
+++ b/app/templates/owner/_sidebar.html
@@ -9,7 +9,15 @@
             <li><span class="fas fa-store-alt"></span> <a href=" {{ url_for('post')}} " class="addActive">Post</a></li>
             <li><span class="fas fa-cart-arrow-down"></span> <a href=" {{ url_for('product') }} " class="addActive">Product</a></li>
             <li><span class="fas fa-users"></span> <a href=" {{ url_for('subscriber') }} " class="addActive">Subscriber</a></li>
-            <li><span class="fas fa-users"></span> <a href=" {{ url_for('contact_list') }} " class="addActive">Contact</a></li>
+
+            <li><span class="fas fa-users"></span> 
+                <a href=" {{ url_for('contact_list') }} " class="addActive">Contact
+                    {% set new_messages = g.admin.new_contact() %}
+                    {% if new_messages %}
+                        <span class="badge" style="color: #c0392b;">{{ new_messages }}</span>
+                    {% endif %}
+            </a></li>
+
             <li><span class="fas fa-plus-circle"></span> <a href=" {{ url_for('addpost') }} " class="addActive">Add Post</a></li>
             <li><span class="fas fa-plus-circle"></span> <a href=" {{ url_for('addproduct') }} " class="addActive">Add Product</a></li>
             <li><span class="fas fa-users"></span> <a href=" {{ url_for('list_of_admin') }} " class="addActive">Admin List</a></li>
