--- a/app/static/style/style.css
+++ b/app/static/style/style.css
@@ -865,12 +865,12 @@ footer{
     margin-top: 70px;
     margin-bottom: 20px;
     border-radius: 10px;
-    background-color: #ecf0f1;
+    background-color: #9bc634;
 }
 
 
 .latest_post h4{
-    color:blue;
+    color:#cc0000;
     text-align: center;
     letter-spacing: 3px;
     margin-top: 20px;
@@ -879,7 +879,7 @@ footer{
 }
 
 
-.latest_post p{
+.latest_post h2{
     margin-left: 7px;
     padding-right: 7px;
     font-size: 1.1rem;
@@ -889,13 +889,13 @@ footer{
 }
 
 
-.latest_post p a{
+.latest_post h2 a{
     text-decoration: none;
-    color: #34495e;
+    color: #fff;
 }
 
 
-.latest_post p a:hover{
+.latest_post h2 a:hover{
     color: blue;
     border-bottom: 1px solid blue;
 }
