--- a/app/templates/client/blog.html
+++ b/app/templates/client/blog.html
@@ -24,7 +24,7 @@
         <img src=' data:;base64,{{ b64encode(post.image).decode("utf-8") }} ' alt="blog picture">
         <h2>{{post.title}}</h2>
         <p>{{post.article|safe|truncate(270, True, '...')}}</p>
-        <a href=" {{ url_for('post_view', id=post.id)}} "><button> Read More </button></a>
+        <a href=" {{ url_for('post_view', title=post.title)}} "><button> Read More </button></a>
     </div>
     {% endfor %}
   
@@ -35,7 +35,7 @@
     <a href=" {{next_url}} ">next</a>
     {% endif %}
     {% if prev_url %}
-    <a href="">previous</a>
+    <a href="{{prev_url}}">previous</a>
     {% endif %}
 </div>
 
