--- a/app/static/style/style.css
+++ b/app/static/style/style.css
@@ -861,6 +861,7 @@ footer{
     width: 100%;
     height: auto;
     display: flex;
+    position: relative;
     flex-direction: column;
     margin-top: 70px;
     margin-bottom: 20px;
@@ -891,7 +892,7 @@ footer{
 
 .latest_post h2 a{
     text-decoration: none;
-    color: #fff;
+    color: #34495e;
 }
 
 
