--- a/app/templates/client/index.html
+++ b/app/templates/client/index.html
@@ -45,8 +45,11 @@
 <div class="cardsContainer">
     
     {% for post in posts %}
+    
     <div class="card">
-        <img src=' data:;base64,{{ b64encode(post.image).decode("utf-8") }} ' alt="blog picture">
+        <a href=" {{ url_for('post_view', title=post.title)}} ">
+            <img src=' data:;base64,{{ b64encode(post.image).decode("utf-8") }} ' title="{{post.title}}" alt="{{post.image_name}}">
+        </a>
         <h2>{{post.title}}</h2>
         <p>{{post.article|safe|truncate(270, True, '...')}}</p>
         <a href=" {{ url_for('post_view', title=post.title)}} "><button> Read More </button></a>
