--- a/app/templates/client/shop.html
+++ b/app/templates/client/shop.html
@@ -35,10 +35,12 @@
     
     {% for product in products %}
     <div class="shoping_card">
-        <img src=" data:;base64,{{ b64encode(product.product_image).decode('utf-8') }} " alt="">
+        <a href=" {{product.product_url}} " target="_blank">
+            <img src=" data:;base64,{{ b64encode(product.product_image).decode('utf-8') }} " title="{{product.title}}" alt="{{product.product_image_name}}">
+        </a>
         <h2>{{product.title}}</h2>
         <span>$ {{product.price}}</span>
-        <a href=" {{product.product_url}} "><button> BUY </button></a>
+        <a href=" {{product.product_url}} " target="_blank"><button> BUY </button></a>
     </div>
     {% endfor %}
 
