--- a/app/templates/client/index.html
+++ b/app/templates/client/index.html
@@ -48,7 +48,7 @@
     
     <div class="card">
         <a href=" {{ url_for('post_view', title=post.title)}} ">
-            <img src=' data:;base64,{{ b64encode(post.image).decode("utf-8") }} ' title="{{post.title}}" alt="{{post.image_name}}">
+            <img src=' data:;base64,{{ b64encode(post.image).decode("utf-8") }} ' title="Pic of {{post.title}}" alt="{{post.image_name}}">
         </a>
         <h2>{{post.title}}</h2>
         <p>{{post.article|safe|truncate(270, True, '...')}}</p>
