--- a/app/templates/client/index.html
+++ b/app/templates/client/index.html
@@ -47,12 +47,12 @@
     {% for post in posts %}
     
     <div class="card">
-        <a href=" {{ url_for('post_view', title=post.title)}} ">
+        <a href=" {{ url_for('post_view', title=post.title.replace(' ', '-'))}} ">
             <img src=' data:;base64,{{ b64encode(post.image).decode("utf-8") }} ' title="Pic of {{post.title}}" alt="{{post.image_name}}">
         </a>
         <h2>{{post.title}}</h2>
         <p>{{post.article|safe|truncate(270, True, '...')}}</p>
-        <a href=" {{ url_for('post_view', title=post.title)}} "><button> Read More </button></a>
+        <a href=" {{ url_for('post_view', title=post.title.replace(' ', '-'))}} "><button> Read More </button></a>
     </div>
     {% endfor %}
   
